# xsra

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: CI.yml
src/: cli.rs  fastq_dump.rs  lib.rs  main.rs  output.rs  summary.rs  utils.rs
src/cli/: describe.rs  dump.rs  fastq.rs  filter.rs  input.rs  mod.rs  prefetch.rs  recode.rs  runtime.rs
src/describe/: mod.rs  stats.rs
src/dump/: fastq.rs  mod.rs  output.rs  stats.rs  utils.rs
src/prefetch/: mod.rs
src/recode/: mod.rs
tests/: describe.rs  dump.rs  prefetch.rs  recode.rs
tests/fixtures/: mod.rs  setup.rs
