[package]
name = "xsra"
version = "0.2.14"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
binseq = "0.6.2"
clap = { version = "4.5.28", features = ["derive"] }
futures = "0.3.31"
gzp = "1"
hashbrown = "0.15.2"
indicatif = "0.17.11"
ncbi-vdb = { git = "ssh://git@github.com/arcinstitute/ncbi-vdb" }
num_cpus = "1.16.0"
parking_lot = "0.12.3"
reqwest = { version = "0.12.15", default-features = false, features = [
    "blocking",
    "stream",
    "rustls-tls",
] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.44.1", features = ["rt", "rt-multi-thread"] }
zstd = { version = "0.13.2", features = ["zstdmt"] }
