[package]
name = "xsra"
version = "0.2.17"
edition = "2021"
license = "MIT"
authors = ["Noam Teyssier <noam.teyssier@arcinstitute.org>"]
description = "A performant and storage-efficient CLI tool to extract sequences from an SRA archive with support for FASTA, FASTQ, and BINSEQ outputs."
repository = "https://github.com/arcinstitute/xsra"
categories = ["command-line-utilities", "science::bioinformatics"]
keywords = ["ncbi", "binseq", "SRA", "genomics", "fasterq-dump"]


[dependencies]
anyhow = "1.0.95"
binseq = "0.6.2"
clap = { version = "4.5.28", features = ["derive"] }
futures = "0.3.31"
gzp = "1"
hashbrown = "0.15.2"
indicatif = "0.17.11"
ncbi-vdb-sys = "0.1.4"
num_cpus = "1.16.0"
parking_lot = "0.12.3"
reqwest = { version = "0.12.15", default-features = false, features = [
    "blocking",
    "stream",
    "rustls-tls",
] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.44.1", features = ["rt", "rt-multi-thread"] }
zstd = { version = "0.13.2", features = ["zstdmt"] }
